fixed dept collapse button issue

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -19,7 +19,7 @@ h1{
 
 .list button{
     position: absolute;
-    left: -35px;
+    /* left: -35px; */
     height: 20px;
     display: flex;
     align-items: center;
